--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,5 +1,7 @@
 @use 'hero';
 @use 'variaveis';
+@use 'shows';
+@use 'plans';
 
 @mixin text($fontSize: 16px) {
     font-size: $fontSize;
@@ -28,10 +30,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: Avenir, sans-serif;
 }
 body {
     background-color: variaveis.$corDeFundo;
-    font-family: Avenir, sans-serif;
 }
 .text--big {
     @include text(18px);
@@ -55,4 +57,17 @@ body {
 }
 .title--small {
     @include title;
+}
+button {
+    display: block;
+    width: 100%;
+    height: 48px;
+    font-size: 16px;
+    color: variaveis.$corTextoSecundario;
+    background-color: #6421ff;
+    text-transform: uppercase;
+    border-radius: 4px;
+    margin-top: 2vw;
+    margin-bottom: 8px;
+    cursor: pointer;
 }
