--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,8 @@
 @use 'variaveis';
 @use 'shows';
 @use 'plans';
+@use 'available-devices';
+@use 'faq';
 
 @mixin text($fontSize: 16px) {
     font-size: $fontSize;
@@ -44,6 +46,13 @@ body {
 .text--small {
     @include text(12px);
 }
+.text--subItem {
+    list-style-type: disc;
+        li {
+        padding-top: 20px;
+        margin-left:40px; 
+        }
+}
 .link-text {
     @include text(18px);
     color: variaveis.$corTextoSecundario;
@@ -69,5 +78,47 @@ button {
     border-radius: 4px;
     margin-top: 2vw;
     margin-bottom: 8px;
+    cursor: pointer;
+}
+.image-text-section {
+    padding: 5.6vw;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+
+    img {
+        max-width: 100%;
+    }
+
+    &__text_container {
+        padding: 0 2vw;
+
+        h2 {
+            margin-bottom: 24px;
+        }
+    }
+
+    &--image-full-width {
+        display: block;
+        position: relative;
+
+        img {
+            width: 100%;
+        }
+
+        &__text_container {
+            position: absolute;
+            top: 0;
+            left: 50%;
+            height: 100%;
+            width: calc(50% - 5.6vw);
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+    }
+}
+.linkDesc {
+    color: white;
     cursor: pointer;
 }
