--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -7,12 +7,24 @@
     text-align: center;
     background-size: cover;
 
+    @media (max-width: 768px) {
+        background-image: url(../images/hero_celular.jpeg);
+        padding-top: calc(50vw + 25px);
+        background-size: contain;
+        background-repeat: no-repeat;
+        margin-top: -55px;
+    }
+
     &__content {
         max-width: calc(640px - 10%);
 
         &__branding {
             max-width: calc(320px - 20%);
             margin: 0 auto 38px;
+
+            @media (max-width: 768px) {
+                max-width: 180px;
+            }
         }
 
         .title--small {
@@ -30,8 +42,18 @@
         &__combos {
             display: flex;
             justify-content: space-between;
+
+            @media (max-width: 768px) {
+                display: block;
+            }
+
             &__combo {
                 width: calc(50% - 12px);
+
+                @media (max-width: 768px) {
+                    width: 100%;
+                    margin-bottom: 24px;
+                }
 
                 img {
                     max-height: 48px;
