--- a/src/styles/_plans.scss
+++ b/src/styles/_plans.scss
@@ -19,6 +19,10 @@
         }
 
         &__item {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
             text-align: center;
             padding: 60px 44px 44px;
             max-width: 380px;
@@ -32,6 +36,10 @@
 
             img {
                 height: 83px;
+
+                @media (max-width: 768px) {
+                    
+                }
             }
 
             strong {
