--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -47,6 +47,10 @@
 
             @media (max-width: 768px) {
                 font-size: 16px;
+
+                &:hover {
+                    background-color: transparent;
+                }
             }
 
             &--is-active {
