--- a/src/styles/_plans.scss
+++ b/src/styles/_plans.scss
@@ -3,6 +3,10 @@
 
     h2 {
         text-align: center;
+
+        @media (min-width: 769px) and (max-width: 1023px) {
+            margin-top: 50px;
+        }
     }
 
     &__list {
@@ -12,6 +16,22 @@
         
         @media (max-width: 768px) {
             display: block;
+        }
+
+        @media (min-width: 769px) and (max-width: 1023px) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        @media (min-width: 1024px) and (max-width: 1366px) {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            margin-top: 20px;
         }
 
         .button {
@@ -40,11 +60,27 @@
                 @media (max-width: 768px) {
                     
                 }
+
+                @media (min-width: 769px) and (max-width: 1023px) {
+                    height: 120px;
+                }
+
+                @media (min-width: 1024px) and (max-width: 1366px) {
+                    height: 120px;
+                }
             }
 
             strong {
                 display: block;
                 margin-top: 24px;
+
+                @media (min-width: 769px) and (max-width: 1023px) {
+                    margin-bottom: 12px;
+                }
+
+                @media (min-width: 1024px) and (max-width: 1366px) {
+                    margin-bottom: 24px;
+                }
             }
         }
 
