--- a/src/styles/_shows.scss
+++ b/src/styles/_shows.scss
@@ -45,8 +45,28 @@
             margin: 0 1vw;
             cursor: pointer;
 
+            &:hover {
+                background-color: transparent;
+            }
+
             @media (max-width: 768px) {
                 font-size: 16px;
+
+                &:hover {
+                    background-color: transparent;
+                }
+            }
+
+            @media (min-width: 769px) and (max-width: 1023px) {
+                font-size: 20px;
+
+                &:hover {
+                    background-color: transparent;
+                }
+            }
+
+            @media (min-width: 1024px) and (max-width: 1366px) {
+                font-size: 24px;
 
                 &:hover {
                     background-color: transparent;
