--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -45,6 +45,14 @@ body {
     @media (max-width: 768px) {
         @include text (15px);
     }
+
+    @media (min-width: 769px) and (max-width: 1023px) {
+        @include title (18px);
+    }
+
+    @media (min-width: 1024px) and (max-width: 1366px) {
+        @include title (20px);
+    }
 }
 .text {
     @include text;
@@ -52,12 +60,28 @@ body {
     @media (max-width: 768px) {
         @include text (14px);
     }
+
+    @media (min-width: 769px) and (max-width: 1023px) {
+        @include text (16px);
+    }
+
+    @media (min-width: 1024px) and (max-width: 1366px) {
+        @include text (18px);
+    }
 }
 .text--small {
     @include text(12px);
 
     @media (max-width: 768px) {
         @include text (11px);
+    }
+
+    @media (min-width: 769px) and (max-width: 1023px) {
+        @include text (18px);
+    }
+
+    @media (min-width: 1024px) and (max-width: 1366px) {
+        @include text (20px);
     }
 }
 .text--subItem {
@@ -78,6 +102,14 @@ body {
     @media (max-width: 768px) {
         @include title (26px);
     }
+
+    @media (min-width: 769px) and (max-width: 1023px) {
+        @include title (32px);
+    }
+
+    @media (min-width: 1024px) and (max-width: 1366px) {
+        @include title (40px);
+    }
 }
 .title {
     @include title(40px);
@@ -85,12 +117,28 @@ body {
     @media (max-width: 768px) {
         @include title (24px);
     }
+
+    @media (min-width: 769px) and (max-width: 1023px) {
+        @include title (32px);
+    }
+
+    @media (min-width: 1024px) and (max-width: 1366px) {
+        @include title (40px);
+    }
 }
 .title--small {
     @include title;
 
     @media (max-width: 768px) {
         @include title (22px);
+    }
+
+    @media (min-width: 769px) and (max-width: 1023px) {
+        @include title (32px);
+    }
+
+    @media (min-width: 1024px) and (max-width: 1366px) {
+        @include title (40px);
     }
 }
 button {
